Atualização 1.2
