# src/routes/user.routes.ts
@@ -10,6 +10,7 @@ const userControllers = new UserControllers();
 
 userRouter.post("/",ValidateBody.execute(userRegisterBodySchema),userControllers.register);
 userRouter.post("/login",ValidateBody.execute(userLoginBodySchema),userControllers.login);
+userRouter.get("/", userControllers.findMany);
 userRouter.get("/:id", ValidateToken.execute ,userControllers.getUser);
 userRouter.patch("/:id", ValidateToken.execute ,userControllers.update)
 userRouter.delete("/:id", userControllers.delete)
